; ModuleID = '/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-data.c_vk_regcomp.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-data.c_vk_regcomp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%.*s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @vk_regcomp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vk_regcomp(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [16384 x i8], align 16
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @regcomp(i32* %10, i8* %11, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = getelementptr inbounds [16384 x i8], [16384 x i8]* %7, i64 0, i64 0
  %20 = call i32 @regerror(i32 %17, i32* %18, i8* %19, i32 16383)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = getelementptr inbounds [16384 x i8], [16384 x i8]* %7, i64 0, i64 0
  %23 = call i32 @kprintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %21, i8* %22)
  br label %24

24:                                               ; preds = %16, %3
  %25 = load i32, i32* %8, align 4
  ret i32 %25
}

declare dso_local i32 @regcomp(i32*, i8*, i32) #1

declare dso_local i32 @regerror(i32, i32*, i8*, i32) #1

declare dso_local i32 @kprintf(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
